Fixed issue with content overflow
-

--- a/css/media.css
+++ b/css/media.css
@@ -280,9 +280,6 @@ and (max-device-width : 480px) {
   body {
     overflow-x: hidden !important;
   }
-  body#approach section {
-    padding: 0px 20px !important;
-  }
   body#approach #about1 {
     margin-top: 20px !important;
   }
@@ -319,7 +316,7 @@ and (max-device-width : 480px) {
   }
   p, h4, .side-menu p, .side-nav .nav-footer .nav-item .nav-link {
     font-size: 1.15rem !important;
-    line-height: 1.5rem !important;
+    line-height: 1.65rem !important;
   }
   .side-nav .navbar-nav .nav-link {
     font-size: 1.35rem !important;
@@ -335,6 +332,13 @@ and (max-device-width : 480px) {
   }
   ul.source-list p {
     line-height: 1.5em !important;
+    font-size: 1.15rem !important;
+    padding: 0 0 25px 15px !important;
+  }
+  ul.source-list .source-link {
+    margin: 5px 0 0 0 !important;
+    display: inline-block !important;
+    width: 100% !important;
   }
   ul.qual-list li {
     margin: 0 !important;
@@ -432,6 +436,10 @@ and (max-device-width : 480px) {
   }
   .fixedmenu {
     background: rgba(252, 245, 233,0.80) !important;
+  }
+  .navbar {
+    width: 100% !important;
+    position: fixed !important;
   }
   .nav-social {
     margin: -5px -15px 0 0 !important;
